--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,8 +33,8 @@ monitor=eDP-1,2560x1600@165,0x0,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus 
-$menu = wofi --show drun
+$fileManager = thunar 
+$menu = fuzzel 
 
 
 #################
@@ -46,8 +46,9 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & 
-
+exec-once = waybar &  
+exec-once = swww &
+exec-once = swww img ~/walls/anime/a_beach_with_palm_trees_and_a_moon.png
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -57,7 +58,6 @@ exec-once = waybar & hyprpaper &
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 ###################
 ### PERMISSIONS ###
@@ -90,7 +90,7 @@ general {
     border_size = 4
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(429ef5aa) 45deg
+    col.active_border = rgba(429ef5aa) rgba(5100f2ff) 90deg 
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -142,8 +142,8 @@ animations {
     bezier = accelerate, 0.00, 0.01, 1.00, -0.02
 
     animation = windowsIn, 1, 5, fast_middle, slide bottom 
-    animation = windowsOut, 1, 5, fast_middle2, slide bottom 
-    animation = windowsMove, 1, 4, fast_middle2, slide 
+    animation = windowsOut, 1, 5, fast_middle, slide bottom 
+    animation = windowsMove, 1, 5, fast_middle, popin 50% 
 
     bezier = pulseCurve, 0.3, 0.0, 0.7, 1.0
     animation = border, 1, 12, pulseCurve
@@ -165,7 +165,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -187,7 +187,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true 
     }
 }
 
@@ -218,6 +218,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, A, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -261,6 +262,20 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Screenshot (with grim and slurp)
+bind = ,Print, exec, grim ~/Pictures/screenshot-$(date +'%Y-%m-%d-%H%M%S').png
+bind = SHIFT,Print, exec, grim -g "$(slurp)" ~/Pictures/screenshot-$(date +'%Y-%m-%d-%H%M%S').png
+bind = CTRL,Print, exec, grim - | wl-copy
+bind = CTRL+SHIFT,Print, exec, grim -g "$(slurp)" - | wl-copy
+
+# Launch TUI apps
+bind = $mainMod, B, exec, kitty -e btop 
+bind = $mainMod, F, exec, kitty -e nvim
+bind = $mainMod, N, exec, kitty -e nmtui 
+bind = $mainMod, Y, exec, kitty -e yazi
+
+
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -282,12 +297,19 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-windowrule = float,class:^(kitty)$,title:^(kitty)$
+# window rules 
+windowrule = float 1, match:class kitty 
+windowrule = size (monitor_w/2) (monitor_h/2), match:class kitty
+windowrule = move (monitor_w/4) (monitor_h/4), match:class kitty
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = float 1, match:class ghostty 
+windowrule = size (monitor_w/2) (monitor_h/2), match:class ghostty 
+windowrule = move (monitor_w/4) (monitor_h/4), match:class ghostty 
 
+windowrule = float 1, match:class foot 
+windowrule = size (monitor_w/2) (monitor_h/2), match:class foot 
+windowrule = move (monitor_w/4) (monitor_h/4), match:class foot 
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = float 1, match:class alacritty 
+windowrule = size (monitor_w/2) (monitor_h/2), match:class alacritty 
+windowrule = move (monitor_w/4) (monitor_h/4), match:class alacritty 
