--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=eDP-1,2560x1600@165,0x0,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar 
+$fileManager = nautilus 
 $menu = fuzzel 
 
 
@@ -48,7 +48,7 @@ $menu = fuzzel
 # exec-once = nm-applet &
 exec-once = waybar &  
 exec-once = swww &
-exec-once = swww img ~/walls/anime/a_beach_with_palm_trees_and_a_moon.png
+exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -211,6 +211,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -219,6 +220,8 @@ bind = $mainMod, A, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, F, fullscreen, 1
+bind = Alt, Tab, cyclenext
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -270,7 +273,7 @@ bind = CTRL+SHIFT,Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Launch TUI apps
 bind = $mainMod, B, exec, kitty -e btop 
-bind = $mainMod, F, exec, kitty -e nvim
+bind = $mainMod, R, exec, kitty -e nvim
 bind = $mainMod, N, exec, kitty -e nmtui 
 bind = $mainMod, Y, exec, kitty -e yazi
 
